--- a/restaurante-template/styles.css
+++ b/restaurante-template/styles.css
@@ -10,6 +10,32 @@
     font-style: normal;
   }
 
+  .none{
+    display: none;
+    opacity: 0;
+  }
+
+ 
+
+  .fadeUp{
+    animation: fadeUp 1100ms;
+  }
+
+  .fadeIn{
+    animation: fadeIn 1200ms;
+  }
+
+  .fadeIn2{
+    animation: fadeIn 1600ms;
+  }
+
+  .fadeFromRight{
+    animation: fadeFromRight 1s;
+  }
+
+  .fadeFromLeft{
+    animation: fadeFromLeft 1s;
+  }
 
   .line{
     width: 160px;
@@ -24,9 +50,10 @@
   }
 
   .subtitle-line{
-    width: 160px;
+    width: 96%;
     border-bottom: 2px solid rgba(190, 190, 190, 0.704);
     border-radius: 5px;
+    margin: 8px 0px 0px 7px;
   }
 
   section#parallax{
@@ -38,5 +65,101 @@
 
   }
 
+  .swiper {
+    width: 70%;
+    height: 100%;
+  }
+
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+ 
+
+  }
+  
+  .swiper-wrapper{
+    margin: 1rem 0rem 3.5rem ;
+    
+  }
+
+  iframe{
+    width:450px;
+    height:320px;
+  }
+
+  
+
+
+  @media (max-width:500px) {
+    .line{
+      width: 100px;
+    }
+
+    iframe{
+      width:300px;
+      height:300px;
+    }
+    
+  }
+
+
+  @keyframes fadeIn {
+
+    from{
+      opacity: 0;
+      transform: translateY(-50%);
+    }
+    to{
+      opacity: 1;
+      transform: translateY(0%);
+    }
+    
+  }
+
+
+  @keyframes fadeUp {
+
+    from{
+      opacity: 0;
+      transform: translateY(50%);
+    }
+    to{
+      opacity: 1;
+      transform: translateY(0%);
+    }
+    
+  }
+
+  
+  @keyframes fadeFromRight {
+
+    from{
+      opacity: 0;
+      transform: translateX(40%);
+    }
+    to{
+      opacity: 1;
+      transform: translateY(0%);
+    }
+    
+  }
+
+  
+  @keyframes fadeFromLeft {
+
+    from{
+      opacity: 0;
+      transform: translateX(-40%);
+    }
+    to{
+      opacity: 1;
+      transform: translateY(0%);
+    }
+    
+  }
 
     
