--- a/restaurante-template/styles.css
+++ b/restaurante-template/styles.css
@@ -15,6 +15,58 @@
     opacity: 0;
   }
 
+  .buttonRight{
+    display:block;
+    position: fixed; 
+    bottom: 30px;
+    right: 30px; 
+    z-index: 99; 
+    border: none; 
+    outline: none; 
+    background-color: rgb(0, 0, 0, 0.5); 
+    color: white; 
+    cursor: pointer; 
+    padding: 5px 21px 10px; 
+    border-radius: 50%;
+    font-size: 40px; 
+  
+  
+
+  }
+
+  .buttonRight:hover {
+    transform: scale(1.05);
+    transition: 200ms;
+    background-color: rgb(0, 0, 0, 0.85); 
+  }
+
+  #navItems a:hover{
+    cursor: pointer;
+    transform: scale(1.1);
+    transition: 200ms;
+
+  }
+
+  nav span:hover{
+    cursor: pointer;
+    transform: scale(1.1);
+    transition: 200ms;
+
+  }
+
+    .notShow{
+      filter: blur(15px);
+      transition: all 0.75s;
+      opacity: 0;
+    }
+
+    .show{
+      filter: blur(0px);
+      transition: all 0.75s;
+      opacity: 1;
+      animation: fadeUp 1000ms;
+    }
+ 
  
 
   .fadeUp{
@@ -125,7 +177,7 @@
 
     from{
       opacity: 0;
-      transform: translateY(50%);
+      transform: translateY(-2rem);
     }
     to{
       opacity: 1;
