--- a/restaurante-template/styles.css
+++ b/restaurante-template/styles.css
@@ -15,6 +15,26 @@
     opacity: 0;
   }
 
+  header{
+    background-image: url('./images/header-bg.png');
+    background-size: cover;
+  }
+
+  .modal{
+    position: fixed;
+    top: 50%;
+    left: 80%;
+    z-index: 5;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    height: 100vh;
+    width: 45%;
+    padding: 3em;
+    animation: slideFromRight 500ms;
+    border-left: 0.5px solid rgba(0, 0, 0, 0.57);
+    
+  }
+
   .buttonRight{
     display:block;
     position: fixed; 
@@ -147,6 +167,14 @@
     
   }
 
+  @media (min-width:768px) {
+    .modal{
+      display: none;
+      opacity: 0;
+    }
+    
+  }
+
   @media (min-width:1000px) {
     .notShow{
       filter: blur(15px);
@@ -162,6 +190,9 @@
     }
 
     section#parallax{
+      background-attachment: fixed;
+    }
+    header{
       background-attachment: fixed;
     }
     
@@ -219,6 +250,16 @@
     to{
       opacity: 1;
       transform: translateY(0%);
+    }
+    
+  }
+
+  @keyframes slideFromRight {
+    from{
+     left:130%
+    }
+    to{
+      
     }
     
   }
