--- a/imovel-template/style.css
+++ b/imovel-template/style.css
@@ -4,6 +4,20 @@
     font-family: "Montserrat", sans-serif;
 }
 
+p{
+    font-size: 19px;
+}
+
+iframe{
+   width: 90%;
+    height: 400px;
+}
+
+li{
+    
+    font-size: 17px;
+}
+
 nav{
     font-weight: 600;
 }
@@ -38,21 +52,36 @@ button:hover{
     cursor: pointer;
 }
 
-p{
-    font-size: 18px;
-}
 
-iframe{
-   width: 90%;
-    height: 400px;
-}
+.buttonRight{
+    display:block;
+    position: fixed; 
+    bottom: 30px;
+    right: 30px; 
+    z-index: 99; 
+    border: none; 
+    outline: none; 
+    background-color: rgb(0, 0, 0, 0.5); 
+    color: white; 
+    cursor: pointer; 
+    padding: 5px 21px 8px; 
+    border-radius: 50%;
+    font-size: 40px; 
+  
+  }
+
+  .buttonRight:hover {
+    transform: scale(1.05);
+    transition: 200ms;
+    background-color: rgb(0, 0, 0, 0.85); 
+  }
 
 
 @media (min-width:600px) {
     
     iframe{
         width: 500px;
-        height: 400px;
+        height: 405px;
     }
 
     #formContainer{
@@ -68,6 +97,11 @@ iframe{
     
     header{
         background-attachment: fixed;
+    }
+    
+    
+    li{
+        font-size: 19px;
     }
 
 }
